[gd_scene load_steps=5 format=3 uid="uid://cll6y18hdvltt"]

[ext_resource type="Script" path="res://Componentes/Entidades/Coin.gd" id="1_mj5v5"]
[ext_resource type="Texture2D" uid="uid://bhrjjely0b7gi" path="res://Assets/Misc/Moneda.png" id="2_nw6rb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_whkqa"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_q2yko"]
radius = 52.0096

[node name="CatNip" type="RigidBody2D"]
script = ExtResource("1_mj5v5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4, 1.5)
scale = Vector2(0.46, 0.484444)
texture = ExtResource("2_nw6rb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -2)
shape = SubResource("CircleShape2D_whkqa")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 67
collision_mask = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 67
visibility_layer = 67
position = Vector2(-3, -2)
shape = SubResource("CircleShape2D_q2yko")

[node name="CatNipTimer" type="Timer" parent="."]
wait_time = 0.21
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="CatNipTimer" to="." method="_on_timer_timeout"]
